<resources>
    <item name="home_menu" type="id" />
    <item name="add_code" type="id" />
    <item name="add_code_options" type="id" />
    <item name="code_input" type="id" />
    <item name="input_status" type="id" />
    <item name="station_settings" type="id" />
    <item name="station_name" type="id" />
    <item name="station_formats" type="id" />
    <item name="station_error" type="id" />
    <item name="station_settings_scroll" type="id" />
    <item name="station_settings_footer" type="id" />
    <item name="station_example" type="id" />
    <item name="station_test_code" type="id" />
    <item name="station_test_result" type="id" />
    <item name="total_count" type="id" />
    <item name="home_complete_all" type="id" />
    <item name="batch_source" type="id" />
    <item name="batch_footer" type="id" />
    <item name="focus_code" type="id" />
    <item name="edit_code" type="id" />
    <item name="edit_station" type="id" />
    <item name="edit_error" type="id" />
    <item name="guide_content_scroll" type="id" />
    <item name="guide_footer" type="id" />
    <item name="history_scroll" type="id" />
    <item name="history_footer" type="id" />
</resources>
